# call-center-voice-agent-accelerator

./: .gitignore  ai-services.json  azure.yaml  role_assignments.json
server/: .env-sample.txt  Dockerfile  README.md  pyproject.toml  server.py
server/.eval-results/cruise-discovery-v3/: output_items.jsonl  report.md  scores.csv  summary.json
server/.eval-results/flight-booking-v13/: output_items.jsonl  report.md  scores.csv  summary.json
server/.eval-sentinels/: cruise-discovery-v3.json  flight-booking-v13.json  holiday-package-v3.json
server/prompts/: system_prompt.txt  travel_booking_prompt.txt
server/scripts/: analyze_eval_results.py  apply_prompt_agents.py  download_eval_results.py  dump_prompt_agents.py  poll_eval_run.py
server/static/: identity.css  identity.js  index.html  live-transcription.html  recap.html  routing-log.css  routing-log.js  theme-wanderlux.css  transcription.html  travel-chat.css  travel-chat.html  travel-support.css  travel-support.html
server/tests/: generate_test_audio.py  generate_test_audio_tts.py  test_ambient_mixer.py  test_attachment_extractor.py  test_attachment_store.py  test_audio_samples.py  test_demo_script_storage.py  test_foundry_admin_api.py  test_foundry_agent_manager.py  test_foundry_definition.py  test_identity_api.py  test_maf_orchestrator.py  test_orchestrator_attachments.py  test_persona_inference.py  test_personas.py  test_teams_bot.py  test_transcription.py  test_transcription_integration.py  test_transport_factory.py  test_travel_agency_api.py  test_travel_attachment_routes.py  test_travel_orchestration.py
(+150 files in other folders)
